# ctgov-query-viz-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  ci.yml  scorecard.yml  security.yml
docs/: AGENT_USAGE.md  EVAL.md
examples/: 01-distribution-by-phase.json  02-distribution-by-status.json  03-time-trend-per-year.json  04-geographic-by-country.json  05-network-sponsor-drug.json  06-comparison-drug-vs-drug.json  07-distribution-too-broad.json
src/ctgov_agent/: __init__.py  config.py
src/ctgov_agent/api/: app.py  schemas.py
src/ctgov_agent/ctgov/: __init__.py  client.py  models.py
src/ctgov_agent/engine/: __init__.py  advisories.py  aggregate.py  citations.py  executor.py  network.py  pipeline.py  vizselect.py
src/ctgov_agent/planner/: __init__.py  base.py  factory.py  ir.py  llm.py  prompt.py  rules.py
src/ctgov_agent/tools/: __init__.py  gen_examples.py  refresh_vocab.py
src/ctgov_agent/vocab/: __init__.py  controlled.py  entities.py  snapshot.json
src/ctgov_agent/web/: index.html
tests/e2e/: test_ctgov_live.py  test_llm_planner_live.py  test_refusal_guard.py
tests/fixtures/: ctgov_search_melanoma.json
tests/integration/: test_call_fanout.py  test_demo_page.py  test_guardrails.py  test_request_validation.py  test_visualize_distribution.py  test_visualize_more_intents.py  test_visualize_network.py
tests/property/: test_aggregation_conservation.py  test_citations_invariant.py
tests/unit/: test_advisories.py  test_aggregate.py  test_aggregate_year_country.py  test_ctgov_client.py  test_entities.py  test_executor.py  test_health.py  test_hint_merge.py  test_ir.py  test_llm_planner.py  test_models.py  test_network.py  test_prompt.py  test_rules_planner.py  test_vocab.py
tools/eval/: README.md  gen_questions.py  tier0_spine.py  tier1_compare.py  tier1_planner.py  tier1_report.py  tier2_live.py
