[project]
name = "ctgov-agent"
version = "0.1.0"
description = "Natural-language → visualization agent over the ClinicalTrials.gov API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "respx>=0.21",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctgov_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
# tools/eval holds reproducibility/analysis scripts, not shipped code — kept out of the strict gate,
# consistent with pyright already scoping to src + tests only.
extend-exclude = ["tools/eval"]

[tool.ruff.lint]
# Pragmatic-but-strict: pyflakes/pycodestyle + import-sort + bugbear + simplify + comprehensions.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# Product code (src/) is fully strict. Test code trips reportUnknown* purely through third-party
# test utilities — Starlette's TestClient method overrides aren't fully annotated — so we relax
# those three reports for tests/ only. The strictness that guards shipped behaviour stays on.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# White-box tests legitimately exercise module-internal helpers.
reportPrivateUsage = false

[tool.pytest.ini_options]
# e2e (live-network) tests are deselected from the default gate; run them via `just e2e`.
addopts = "-ra -m 'not e2e'"
testpaths = ["tests"]
markers = ["e2e: live network tests against ClinicalTrials.gov (deselected by default)"]
asyncio_mode = "auto"
